@@ -309,6 +309,23 @@ Xu          , Xu          , Qxu         , Qxu         , Ql          , Ql        
             type="Silver Mage"
             name= "Hidden Teleporter"
         [/unit]
+        [unit]
+            x,y=18,10
+            type="Soulless"
+            [modifications]
+                [object]
+                    silent=yes
+                    [effect]
+                        apply_to=attack
+                        increase_damage=50
+                    [/effect]
+                    [effect]
+                        apply_to=hitpoints
+                        increase_total=300
+                    [/effect]
+                [/object]
+            [/modifications]
+        [/unit]
     [/side]
     [side]
         side=3
