@@ -109,6 +109,7 @@ Version 1.9.9+svn:
    * Implemented $second_unit being bound to the acting leader in recall/recruit events
    * Added [secondary_unit] SUF for filtering the recalling leader in [recall] action WML
    * Introduce [redraw]clear_shroud=yes|no and [redraw]<SSF> support
+   * Introduce [race]undead_variation as a default for the race's [unit_type]s
  * Miscellaneous and bug fixes:
    * Add --language/-L commandline option to set the language for that session
    * Fixed: Avoid copying of singular iterators in the whiteboard code
